<resources>
    <string name="app_name">Swoosh</string>
    <string name="go_all_text">GO ALL IN</string>
    <string name="on_going_text">ON GOING ALL OUT</string>
    <string name="find_text">Find a team in your city and dominate the league</string>
    <string name="get_started_btn_text">GET STARTED</string>
    <string name="background_content_description">Swoosh</string>
    <string name="logo_content_description">Swoosh Logo</string>
    <string name="desired_league_text">Desired League:</string>
    <string name="mens_btn_text">Mens</string>
    <string name="womens_btn_text">Womens</string>
    <string name="co_ed_btn_text">Co-ed</string>
    <string name="next_btn_text">Next</string>
    <string name="iam_text">I am a:</string>
    <string name="beginner_btn_text">Beginner</string>
    <string name="baller_btn_text">Baller</string>
    <string name="finish_btn_text">FINISH</string>
    <string name="league_toast_message">Please select a league</string>
    <string name="skill_toast_message">Please select a skill</string>
    <string name="selected_league_text">Looking for a %1$s %2$s league near you….</string>
</resources>
